# plonkImplRust

./: .gitignore  Cargo.toml  README.md
src/: arithmetic_gate.rs  bash.sh  circuit_builder.rs  constraints.rs  lib.rs  linear_quotient_polys.rs  lookup_table.rs  main.rs  manyfiles.sh  permutation.rs  prover.rs  singlefile.sh  variable.rs
