[package]
name = "plonk"
version = "0.1.0"
edition = "2021"

[lib]
name = "pr"
path = "src/lib.rs"

[[bin]]
name = "prmain"
path = "src/main.rs"


[dependencies]
ark-ff = "0.3"
ark-sponge = "0.3"
ark-std = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
blake2 = "0.9"
criterion = "0.3"
derivative = "2.2.0"
paste = "1.0.6"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
tempdir = "0.3"
ark-vesta = "0.3"
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Optional
rayon = { version = "1.8.0", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"